--- a/About.html
+++ b/About.html
@@ -43,7 +43,7 @@
         <ul>
           <li><a href="index.html" onclick="toggleMenu()">Home</a></li>
           <li><a href="About.html" onclick="toggleMenu()">About</a></li>
-          <li><a href="Skills.html" onclick="toggleMenu()">Experience</a></li>
+          <li><a href="Skills.html" onclick="toggleMenu()">Skills</a></li>
           <li><a href="Project.html" onclick="toggleMenu()">Projects</a></li>
           <li><a href="Contact.html" onclick="toggleMenu()">Contact</a></li>
         </ul>
@@ -63,7 +63,14 @@
         </div>
         <div class="text-container">
           <p>
-            I'm a BSIT student with big dreams of achieving success and providing my family with a better life. I aim to create opportunities for them and help them experience things they've never had before. I'm dedicated and hardworking, focused on turning my dreams into reality. I’m constantly pushing myself to grow, learn new skills, and make the most out of every opportunity that comes my way. Every step I take is driven by my desire to build a future I can be proud of. I may still be learning, but I’m determined to become someone who can inspire and support the people I love.
+            I'm a BSIT student with big dreams of achieving success and providing my family with a better life. I aim to
+            create opportunities for them and help them experience things they've never had before. I'm dedicated and
+            hardworking, focused on turning my dreams into reality. I’m constantly pushing myself to grow, learn new
+            skills, and make the most out of every opportunity that comes my way. Every step I take is driven by my
+            desire to build a future I can be proud of. I may still be learning, but I’m determined to become someone
+            who can inspire and support the people I love. I know the road won't always be easy, but I'm ready to face
+            every challenge with determination. Every small progress I make brings me closer to the life I dream of. And
+            no matter how long it takes, I will keep moving forward for the people who believe in me.
           </p>
         </div>
       </div>
