--- a/Project.html
+++ b/Project.html
@@ -83,7 +83,7 @@
               <span>JavaScript</span>
             </div>
           </div>
-          <button class="project-btn" onclick="window.open('https://shironxiao.github.io/BeginnerPortfolio/')">
+          <button class="project-btn" onclick="window.open('https://shironxiao.github.io/Portfolio/')">
             <i class="fas fa-external-link-alt"></i> View Live Demo
           </button>
         </div>
