--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <button class="btn btn-color-2" onclick="window.open('./assets/Resume.pdf')">
           Download CV
         </button>
-        <button class="btn btn-color-1" onclick="location.href='./#contact'">
+        <button class="btn btn-color-1" onclick="location.href='Contact.html'">
           Contact Info
         </button>
       </div>
