--- a/Contact.html
+++ b/Contact.html
@@ -14,7 +14,7 @@
 <body>
   <nav id="desktop-nav">
     <div class="logo">Ronald</div>
-    <div>
+    <div style="display: flex; align-items: center; gap: 2rem;">
       <ul class="nav-links">
         <li><a href="index.html">Home</a></li>
         <li><a href="About.html">About</a></li>
@@ -22,10 +22,10 @@
         <li><a href="Project.html">Projects</a></li>
         <li><a href="Contact.html">Contact</a></li>
       </ul>
+      <button id="themeToggle" class="theme-toggle" aria-label="Toggle Light/Dark Mode">
+        <span class="toggle-icon">🌙</span>
+      </button>
     </div>
-    <button id="themeToggle" class="theme-toggle" aria-label="Toggle Light/Dark Mode">
-      <span class="toggle-icon">🌙</span>
-    </button>
 
   </nav>
   <nav id="hamburger-nav">
@@ -56,12 +56,6 @@
     <div class="contact-container">
       <!-- Contact Information - Left Side -->
       <div class="contact-info-section">
-        <div class="contact-intro">
-          <p>
-            If you have questions about my projects or want to collaborate, feel free to reach out.
-            I'm open to internships, project-based work, and opportunities to grow in the IT field.
-          </p>
-        </div>
         <div class="contact-details">
           <div class="contact-item">
             <i class="fas fa-envelope"></i>
