--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <nav id="desktop-nav">
     <div class="logo">Ronald</div>
-    <div>
+    <div style="display: flex; align-items: center; gap: 2rem;">
       <ul class="nav-links">
         <li><a href="index.html">Home</a></li>
         <li><a href="About.html">About</a></li>
@@ -22,10 +22,10 @@
         <li><a href="Project.html">Projects</a></li>
         <li><a href="Contact.html">Contact</a></li>
       </ul>
+      <button id="themeToggle" class="theme-toggle" aria-label="Toggle Light/Dark Mode">
+        <span class="toggle-icon">🌙</span>
+      </button>
     </div>
-    <button id="themeToggle" class="theme-toggle" aria-label="Toggle Light/Dark Mode">
-      <span class="toggle-icon">🌙</span>
-    </button>
 
   </nav>
   <nav id="hamburger-nav">
@@ -59,10 +59,7 @@
       <h1 class="title">Ronald Sevilla</h1>
       <p class="section__text__p2"> IT Student Developer</p>
       <div class="btn-container">
-        <button class="btn btn-color-2" onclick="window.open('./assets/Resume.pdf')">
-          Download CV
-        </button>
-        <button class="btn btn-color-1" onclick="location.href='Contact.html'">
+        <button class="btn btn-color-1" onclick="location.href=' Contact.html'">
           Contact Info
         </button>
       </div>
